<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/main_menu_color_back_grey"
    tools:context="com.wjbzg.www.obor.activity.ResetPwdEditActivity">
    <include layout="@layout/toolbar_reback_white" />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/tel_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="15dp"
                    android:background="#FFFFFF">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:gravity="center|left"
                            android:text="@string/register_field_new_pwd"
                            android:textSize="@dimen/main_menu_text_size9"
                            android:textColor="@color/colorBlack"
                            />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="10dp"
                            android:hint="@string/register_hint_pwd"
                            android:textSize="@dimen/main_menu_text_size9"
                            android:background="@null"/>
                    </LinearLayout>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="15dp"
                    android:background="#FFFFFF">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:gravity="center|left"
                            android:text="@string/register_field_repwd"
                            android:textSize="@dimen/main_menu_text_size9"
                            android:textColor="@color/colorBlack"
                            />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="10dp"
                            android:hint="@string/register_hint_repwd_confirm"
                            android:textSize="@dimen/main_menu_text_size9"
                            android:background="@null"/>
                    </LinearLayout>
                </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/ellipse_bg_blue"
                android:text="@string/common_field_confirm"
                android:textColor="@color/main_menu_white"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
