<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:background="@color/main_menu_color_back_grey">

    <!-- 中间区域 -->
    <FrameLayout
        android:id="@+id/frame_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/navigation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >
    </FrameLayout>


    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="#ffffff">

        <LinearLayout
            android:id="@+id/linear_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_home"
                android:layout_width="@dimen/main_menu_nav_size"
                android:layout_height="@dimen/main_menu_nav_size"
                android:layout_marginBottom="@dimen/distance_small"
                android:src="@mipmap/home_icon" />

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_home_page"
                android:textColor="#333333"
                android:textSize="@dimen/main_menu_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_info"
                android:layout_width="@dimen/main_menu_nav_size"
                android:layout_height="@dimen/main_menu_nav_size"
                android:layout_marginBottom="@dimen/distance_small"
                android:src="@mipmap/info_icon" />

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_info_page"
                android:textColor="#333333"
                android:textSize="@dimen/main_menu_text_size" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_click"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_gravity="bottom"
            android:layout_weight="1">

            <!--<ImageView-->
                <!--android:layout_width="45dp"-->
                <!--android:layout_height="45dp"-->
                <!--android:layout_centerInParent="true"-->
                <!--android:src="@mipmap/plus_icon" />-->

            <ImageView
                android:id="@+id/iv_img"
                android:layout_width="40dp"
                android:layout_height="42dp"
                android:layout_marginBottom="@dimen/distance_small"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/plus_icon" />

            <TextView
                android:id="@+id/tv_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_img"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                android:text="@string/menu_publish"
                android:textColor="#333333"
                android:textSize="@dimen/main_menu_text_size" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linear_discover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_discover"
                android:layout_width="@dimen/main_menu_nav_size"
                android:layout_height="@dimen/main_menu_nav_size"
                android:layout_marginBottom="@dimen/distance_small"
                android:src="@mipmap/discover_icon" />

            <TextView
                android:id="@+id/tv_discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_discover_page"
                android:textColor="#333333"
                android:textSize="@dimen/main_menu_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_mine"
                android:layout_width="@dimen/main_menu_nav_size"
                android:layout_height="@dimen/main_menu_nav_size"
                android:layout_marginBottom="@dimen/distance_small"
                android:src="@mipmap/mine_icon" />

            <TextView
                android:id="@+id/tv_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_mine_page"
                android:textColor="#333333"
                android:textSize="@dimen/main_menu_text_size" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
