<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TableRow
            android:id="@+id/regulation"
            android:layout_height="70dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle2"
            android:padding="10dp">
            <ImageView
                android:layout_height="match_parent"
                android:layout_width="50dp"
                android:padding="5dp"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/regulations"
                />
            <TextView
                android:layout_height="match_parent"
                android:layout_width="45dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="18dp"
                android:text="@string/info_field_regulations"
                />
        </TableRow>
        <TableRow
            android:layout_height="70dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle2"
            android:padding="10dp">
            <ImageView
                android:layout_height="match_parent"
                android:layout_width="50dp"
                android:padding="5dp"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/company_sound"
                />
            <TextView
                android:layout_height="match_parent"
                android:layout_width="45dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="18dp"
                android:text="@string/info_field_company_sound"
                />
        </TableRow>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TableRow
            android:layout_height="70dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle2"
            android:padding="10dp">
            <ImageView
                android:layout_height="match_parent"
                android:layout_width="50dp"
                android:padding="5dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="left"
                android:src="@mipmap/industry_dynamic"
                />
            <TextView
                android:layout_height="match_parent"
                android:layout_width="45dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="18dp"
                android:text="@string/info_field_industry_dynamic"
                />
        </TableRow>
        <TableRow
            android:layout_height="70dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle2"
            android:padding="10dp">
            <ImageView
                android:layout_height="match_parent"
                android:layout_width="50dp"
                android:padding="5dp"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/work_mien"
                />
            <TextView
                android:layout_height="match_parent"
                android:layout_width="45dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="18dp"
                android:text="@string/info_field_work_mien"
                />
        </TableRow>
    </LinearLayout>
</LinearLayout>