<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0ffffff"
    android:clipChildren="false"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="bottom"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/test7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/publish_request" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_field_request"
                android:textColor="#333333"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/test8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/publish_source" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_field_source"
                android:textColor="#333333"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/pop_rl_click"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom">

        <!--<ImageView-->
            <!--android:layout_width="45dp"-->
            <!--android:layout_height="45dp"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:src="@mipmap/plus_icon" />-->

        <ImageView
            android:id="@+id/pop_iv_img"
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:layout_marginBottom="@dimen/distance_small"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@mipmap/plus_icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pop_iv_img"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/menu_publish"
            android:textColor="#333333"
            android:textSize="@dimen/main_menu_text_size" />
    </RelativeLayout>

</RelativeLayout>